# ptychoml

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: test.yml
ptychoml/: __init__.py  cli.py  inference.py  orientation.py  preprocess.py  trt.py
tests/: conftest.py  synthetic.py  test_orientation.py  test_preprocess.py  test_smoke.py  test_synthetic.py
