[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ptychoml"
version = "0.1.0"
requires-python = ">=3.12"
license = {file = "LICENSE"}
dependencies = [
    "numpy>=1.20",
    "scipy>=1.10",
]

[project.scripts]
ptychoml-build-engine = "ptychoml.cli:main"
ptychoml-predict = "ptychoml.cli:predict_main"

[tool.setuptools]
packages = ["ptychoml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
